<resources>
    <string name="app_name">Conversor de Moeda</string>
    <string name="realValue">Valor em Real:</string>
    <string name="dollarValue">Valor em Dólar:</string>
    <string name="euroValue">Valor em Euro:</string>
    <string name="btnCalc">Calcular</string>
    <string name="dollarValueHint">$</string>
    <string name="euroValueHint">"\u20AC"</string>
    <string name="valueHintConverted">valor convertido...</string>
</resources>
